# nydus

./: .gitignore  .golangci.yml  .travis.yml  ADOPTERS.md  APPROVERS.md  Algorithms Introduction.md  Cargo.toml  Cross.toml  Dockerfile.test  LICENSE-BSD-3-Clause  MAINTAINERS.md  Makefile  README.md  SEAMLESS_SNAPSHOT_SUMMARY.md  build.rs  config.yaml  debug_background.sh  debug_seamless.sh  deny.toml  go.work  go.work.sum  goreleaser.sh  rust-toolchain.toml  test_seamless_fix.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  copilot-instructions.md  dependabot.yml
api/: Cargo.toml  README.md
api/openapi/: nydus-api-v1.yaml  nydus-api-v2.yaml  nydus-rs.yaml
api/src/: config.rs  error.rs  http.rs  http_endpoint.rs  http_endpoint_common.rs  http_endpoint_v1.rs  http_endpoint_v2.rs  http_handler.rs  lib.rs
app/: CHANGELOG.md  Cargo.toml  README.md  build.rs
app/src/: lib.rs
blobfs/: Cargo.toml
blobfs/src/: lib.rs  multikey.rs  sync_io.rs
builder/: Cargo.toml
builder/src/: attributes.rs  chunkdict_generator.rs  compact.rs  directory.rs  generate.rs  lib.rs  merge.rs  optimize_prefetch.rs  stargz.rs  tarball.rs
builder/src/core/: blob.rs  bootstrap.rs  bootstrap_dedup.rs  chunk_dict.rs  context.rs  feature.rs  layout.rs  mod.rs  node.rs  overlay.rs  prefetch.rs  tree.rs  v5.rs  v6.rs
clib/: Cargo.toml
clib/examples/: nydus_rafs.c
clib/include/: nydus.h
clib/src/: file.rs  fs.rs  lib.rs
contrib/nydus-backend-proxy/: Cargo.toml  Makefile  README.md
contrib/nydus-backend-proxy/src/: main.rs
docs/: README.md  api-reference.md  cache_and_prefetch.md  chinese_docker_graph_driver_guide.md  chunk-deduplication.md  containerd-env-setup.md  data-deduplication.md  docker-env-setup.md  erofs.md  fanotify.md  image-builder.md  lepton.md  nydus-design.md  nydus-dev.md  nydus-dragonfly.md  nydus-failover-upgrade.md  nydus-fscache.md  nydus-image.md  nydus-local-cas.md  nydus-overlayfs.md  nydus-uffd.md  nydus-v3-proposal.md  nydus-v6-design.md  nydus-zran.md  nydus.md  nydus_with_macos.md  nydusd.md  nydusify.md  prefetch.md  quick-start.md  seamless-snapshot.md  seamless_snapshot.md  technical-design.md  tutorial.md  uffd.md
error/: Cargo.toml  README.md
error/src/: error.rs  logger.rs
examples/: seamless_snapshot_demo.sh
leptonify/: .gitignore  Makefile  go.mod  (+2 more)
nydus/: Cargo.toml
nydus-accessor/: Cargo.toml  README.md
nydus-accessor/src/: accessor.rs  lib.rs
nydus-accessor/src/fs/: data.rs  meta.rs  mod.rs
nydus-accessor/src/metadata/: blob_footer.rs  blob_meta.rs  chunk.rs  layout.rs  mod.rs
nydus-accessor/src/metrics/: mod.rs  trace.rs
nydus-accessor/src/storage/: groupmap.rs  mod.rs
nydus-accessor/src/storage/backend/: pauser.rs  proxy.rs  request.rs
nydus-accessor/src/storage/backend/registry/: mod.rs
nydus-accessor/src/storage/cache/: local.rs  mod.rs
nydus-accessor/src/utils/: digest.rs
nydus-accessor/tests/: accessor.rs  erofs_reader.rs
nydus-accessor/tests/common/: mod.rs
nydus/src/: fuse.rs  lib.rs  merge.rs
nydus/src/fanotify/: core.rs  event.rs  mod.rs  mount.rs  response.rs  service.rs
nydus/src/tracing/: mod.rs
nydus/src/uffd/: core.rs
rafs/: Cargo.toml  LICENSE-BSD-3-Clause  README.md
rafs/src/: error.rs  fs.rs  io_stats.rs  lib.rs  observe.rs  prefetch.rs
rafs/src/blobfs/: mod.rs  sync_io.rs
rafs/src/builder/: compact.rs  directory.rs  merge.rs  mod.rs  stargz.rs  tarball.rs
rafs/src/builder/core/: blob.rs  bootstrap.rs  chunk_dict.rs  context.rs  feature.rs  layout.rs  mod.rs  node.rs  overlay.rs  prefetch.rs  tree.rs  v5.rs  v6.rs
rafs/src/metadata/: cached.rs  cached_v5.rs  chunk.rs  digest.rs  direct.rs  direct_v5.rs  direct_v6.rs  inode.rs  layout.rs  md_v5.rs  md_v6.rs  mod.rs  noop.rs
rafs/src/metadata/extended/: blob_table.rs  mod.rs
rafs/src/metadata/layout/: mod.rs  toc.rs  v5.rs  v6.rs
rafs/src/mock/: mock_chunk.rs  mock_inode.rs  mock_super.rs  mod.rs
rafs/src/storage/: device.rs  factory.rs  mod.rs  utils.rs
rafs/src/storage/backend/: localfs.rs  mod.rs  oss.rs  registry.rs  request.rs
rafs/src/storage/cache/: blobcache.rs  dummycache.rs  mod.rs
rafs/src/storage/compress/: lz4_standard.rs  mod.rs
rafs/tests/: io_amplify.rs
service/: Cargo.toml  README.md
service/src/: blob_cache.rs  block_device.rs  block_nbd.rs  block_uffd.rs  daemon.rs  fs_cache.rs  fs_service.rs  fusedev.rs  lib.rs  singleton.rs  uffd_proto.rs  upgrade.rs
storage/: Cargo.toml  README.md
storage/src/: context.rs  device.rs  factory.rs  lib.rs  test.rs  utils.rs  volatile.rs
storage/src/backend/: connection.rs  hickory.rs  http_proxy.rs  localdisk.rs  localfs.rs  mod.rs  noop.rs  object_storage.rs  oss.rs  pauser.rs  proxy.rs  qps.rs  registry.rs  request.rs  s3.rs  url_encoding.rs
storage/src/cache/: blobcache.rs  cachedfile.rs  dummycache.rs  mod.rs  streaming.rs  worker.rs
storage/src/cache/chunkmap/: chunk_digested.rs  chunk_indexed.rs  digested.rs  indexed.rs  mod.rs  noop.rs
storage/src/cache/dedup/: db.rs  mod.rs
storage/src/cache/filecache/: cache_entry.rs  mod.rs  prefetch.rs
storage/src/cache/fscache/: mod.rs
storage/src/cache/state/: blob_chunk_map.rs  blob_state_map.rs  digested_chunk_map.rs  indexed_chunk_map.rs  mod.rs  noop_chunk_map.rs  persist_map.rs  range_map.rs
storage/src/compress/: lz4_standard.rs  mod.rs
storage/src/meta/: batch.rs  chunk_info_v1.rs  chunk_info_v2.rs  mod.rs  toc.rs  zran.rs
storage/src/remote/: client.rs  connection.rs  message.rs  mod.rs  server.rs
storage/tests/: qps_pauser_integration.rs
upgrade/: Cargo.toml
upgrade/src/: lib.rs  persist.rs
upgrade/src/backend/: mod.rs  unix_domain_socket.rs
utils/: CHANGELOG.md  Cargo.toml  README.md  build.rs
utils/src/: async_helper.rs  cas.rs  compact.rs  config.rs  crc.rs  crc32.rs  crypt.rs  digest.rs  error.rs  exec.rs  filemap.rs  fuse.rs  inode_bitmap.rs  lib.rs  logger.rs  metrics.rs  mpmc.rs  reader.rs  signal.rs  singleflight.rs  trace.rs  types.rs  verity.rs
utils/src/compress/: lz4_standard.rs  mod.rs  zlib_random.rs  zstd_standard.rs
(+718 files in other folders)
