[package]
name = "lepton"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lepton"
path = "src/bin/lepton/main.rs"

[features]
default = ["backend-registry"]
# Container image registry backend (OCI distribution).
backend-registry = [
  "dep:reqwest",
  "dep:hickory-resolver",
  "dep:url",
  "dep:base64",
  "dep:arc-swap",
  "dep:once_cell",
  "dep:futures",
  "dep:rand",
  "dep:serde_json",
]
# Dragonfly P2P SDK proxy support for the registry backend.
backend-dragonfly-proxy = ["backend-registry", "dep:dragonfly-client-util"]

[dependencies]
anyhow = "1"
arc-swap = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
bitflags = "2"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6"
dragonfly-client-util = { version = "1.0", optional = true }
fuser = "0.17"
futures = { version = "0.3", optional = true }
hickory-resolver = { version = "0.25", optional = true }
libc = "0.2"
log = "0.4"
memmap2 = "0.9"
once_cell = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream",
], optional = true }
rolling-file = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = "0.9"
sha2 = "0.10"
signal-hook = "0.3"
tempfile = "3.25.0"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "net",
  "rt",
  "rt-multi-thread",
  "sync"
] }
tracing = "0.1"
tracing-appender = "0.2.4"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3", features = [
  "chrono",
  "env-filter",
  "time"
] }
url = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"] }
xattr = "1"
zstd = "0.13"

[profile.bench]
debug = true

[profile.dev]
opt-level = 0
debug = true
strip = false
incremental = true

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
panic = "abort"
codegen-units = 1
