[package]
name = "nydus-app"
version = "0.2.0"
authors = ["The Nydus Developers"]
description = "Application framework and utilities for Nydus"
readme = "README.md"
repository = "https://github.com/dragonflyoss/image-service"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"
build = "build.rs"

[build-dependencies]
built = { version = "=0.4.3", features = ["chrono", "git2"] }

[dependencies]
# pin regex to fix RUSTSEC-2022-0013
regex = "1.5.5"
flexi_logger = { version = "0.17" }
libc = "0.2"
log = "0.4"
nix = "0.23.1"
serde = { version = "1.0.110", features = ["serde_derive"] }

nydus-error = { version = "0.2", path = "../error" }
