[package]
name = "nydus-blobfs"
version = "0.1.1"
description = "Blob object file system for Nydus Image Service"
authors = ["The Nydus Developers"]
license = "Apache-2.0 OR BSD-3-Clause"
homepage = "https://nydus.dev/"
repository = "https://github.com/dragonflyoss/image-service"
edition = "2018"

[dependencies]
fuse-backend-rs = { version = "0.9" }
libc = "0.2"
log = "0.4.8"
serde = { version = "1.0.110", features = ["serde_derive", "rc"] }
serde_json = "1.0.53"
vm-memory = { version = "0.9" }

nydus-error = { version = "0.2", path = "../error" }
nydus-rafs = { version = "0.1", path = "../rafs" }
nydus-storage = { version = "0.5", path = "../storage", features = ["backend-localfs"] }

[dev-dependencies]
nydus-app = { version = "0.3", path = "../app" }

[features]
virtiofs = [ "fuse-backend-rs/virtiofs", "nydus-rafs/virtio-fs" ]
backend-oss = ["nydus-rafs/backend-oss"]
backend-registry = ["nydus-rafs/backend-registry"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
