[package]
name = "nydus-clib"
version = "0.1.0"
description = "C wrapper library for Nydus SDK"
authors = ["The Nydus Developers"]
license = "Apache-2.0"
homepage = "https://nydus.dev/"
repository = "https://github.com/dragonflyoss/image-service"
edition = "2021"

[lib]
name = "nydus_clib"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.137"
log = "0.4.17"
fuse-backend-rs = "0.10.0"
nydus-api = { version = "0.2", path = "../api" }
nydus-rafs = { version = "0.2.0", path = "../rafs" }

[features]
baekend-s3 = ["nydus-rafs/backend-s3"]
backend-oss = ["nydus-rafs/backend-oss"]
backend-registry = ["nydus-rafs/backend-registry"]
backend-http-proxy = ["nydus-rafs/backend-http-proxy"]
backend-localdisk = ["nydus-rafs/backend-localdisk"]
