[package]
name = "nydus-error"
version = "0.2.0"
description = "Error handling utilities for Nydus"
readme = "README.md"
repository = "https://github.com/dragonflyoss/image-service"
authors = ["The Nydus Developers"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[dependencies]
backtrace = "0.3"
httpdate = "1.0"
libc = "0.2"
log = "0.4"
serde = { version = "1.0.110", features = ["serde_derive", "rc"] }
serde_json = "1.0.53"
